fix: make password visibility icon work

--- a/src/components/ui/Input/index.module.scss
+++ b/src/components/ui/Input/index.module.scss
@@ -61,7 +61,3 @@
   font-size: var(--font-size-xl);
   padding: var(--padding-xl);
 }
-
-.number {
-  text-align: right;
-}
